--- a/src/styles/add.css
+++ b/src/styles/add.css
@@ -6,6 +6,12 @@
 }
 
 .add-img {
+    cursor: pointer;
     width: 30px;
     height: 30px;
+    transition: transform 0.1s ease-in-out;
+}
+
+.add-img:hover {
+    transform: scale(1.2);
 }
