update styles to improve print result

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -10,6 +10,7 @@
         "email headshot"
         "phone headshot";
     border-bottom: 0.5px solid black;
+    padding-bottom: 10px;
 }
 
 .name {
