--- a/src/styles/add.css
+++ b/src/styles/add.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30px;
 }
 
 .add-img {
@@ -10,6 +11,9 @@
     width: 30px;
     height: 30px;
     transition: transform 0.1s ease-in-out;
+    border-radius: 50%;
+    border: 2px solid black;
+    background-color: rgba(255, 196, 86, 0.761);
 }
 
 .add-img:hover {
