--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -48,8 +48,22 @@ body,
 	padding: 20px;
 }
 
+.edit-button {
+	cursor: pointer;
+	border: 0.5px solid black;
+    padding: 10px;
+    border-radius: 10px;
+	background-color: rgba(255, 196, 86, 0.761);
+	transition: transform 0.1s ease-in-out;
+}
+
+.edit-button:hover {
+	transform: scale(1.1);
+}
+
 @media print {
-	.no-print {
-		visibility: hidden;
+	.no-print,
+	.no-print.copyright {
+		display: none;
 	}
 }
