--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -1,12 +1,16 @@
 .education-section {
     display: flex;
     flex-direction: column;
+    border-bottom: 0.5px solid black;
+    padding-bottom: 10px;
+    margin: 20px 0;
 }
 
 .education-section-title {
-    margin: 30px 0 10px;
     font-size: 1.5rem;
     font-weight: 300;
+    display: flex;
+    justify-content: space-between;
 }
 
 .education-title-border {
