--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -1,12 +1,14 @@
 .work-section {
     display: flex;
     flex-direction: column;
+    margin: 20px 0;
 }
 
 .work-section-title {
-    margin: 30px 0 10px;
     font-size: 1.5rem;
     font-weight: 300;
+    display: flex;
+    justify-content: space-between;
 }
 
 .work-title-border {
