--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -67,9 +67,40 @@ body,
     text-decoration: underline;
 }
 
+/* editing view: */
+
+.editing-entry {
+    display: flex;
+    flex-direction: column;
+    padding: 15px 0;
+}
+
+.item-edits {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "edits-label edits-input";
+    column-gap: 10px;
+    margin: 10px 0;
+}
+
+.edits-label {
+    grid-area: edits-label;
+    text-align: right;
+}
+
+.edits-input {
+    grid-area: edits-input;
+}
+
 input,
 textarea {
 	font-family: 'Courier New', Courier, monospace;
+}
+
+textarea {
+	height: 50px;
+	resize: none;
 }
 
 input:focus,
