--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -63,8 +63,29 @@ body,
 
 .editing-entry-title {
 	font-size: 1.15rem;
-    font-weight: 200;
+	display: flex;
+	justify-content: space-between;
+}
+
+.title-text {
+	font-weight: 200;
     text-decoration: underline;
+}
+
+.delete-item {
+	cursor: pointer;
+	color: red;
+	font-weight: 300;
+	text-decoration: none;
+	border: 0.5px solid red;
+	border-radius: 10px;
+	padding: 8px;
+	background-color: rgba(255, 212, 212, 0.86);
+	transition: transform 0.1s ease-in-out;
+}
+
+.delete-item:hover {
+	transform: scale(1.05);
 }
 
 /* editing view: */
