begin working on final styles

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -39,13 +39,17 @@ body,
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	background: rgb(152,42,46);
+	background: linear-gradient(135deg, rgba(152,42,46,0.5830926120448179) 0%, rgba(252,144,136,0.5074623599439776) 100%);
 }
 
 .wrapper {
+	background-color: white;
 	min-width: 816px;
 	max-width: 816px;
-	min-height: 1056px;
+	min-height: 100vh;
 	padding: 20px;
+	border: 2px solid black;
 }
 
 .edit-button {
@@ -132,6 +136,13 @@ textarea:focus {
 }
 
 @media print {
+	#root {
+		background: rgb(255,255,255);
+		background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 100%);
+	}
+	.wrapper {
+		border: none;
+	}
 	.no-print,
 	.no-print.copyright {
 		display: none;
