--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,5 @@
 footer.copyright {
-    margin-top: 30px;
+    margin-top: auto;
     padding-top: 10px;
     border-top: 1px dashed black;
     height: 5vh;
@@ -8,4 +8,6 @@ footer.copyright {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 0.8rem;
+    font-weight: 200;
 }
