--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -1,7 +1,7 @@
 .work-section {
     display: flex;
     flex-direction: column;
-    margin: 20px 0;
+    margin: 20px 0 0;
 }
 
 .work-section-title {
