--- a/src/styles/print.css
+++ b/src/styles/print.css
@@ -1,3 +1,94 @@
+.print-options {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border-top: 1px dashed black;
+}
+
+.font-text,
+.accent-text {
+    font-size: 1.1rem;
+    font-weight: 200;
+}
+
+.accent-options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.color-picker {
+    width: 100px;
+}
+
+.font-options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.font-list {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.font-choice {
+    font-size: 0.9rem;
+    cursor: pointer;
+    font-weight: 300;
+    border: 0.5px solid black;
+    border-radius: 10px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    max-width: fit-content;
+    background-color: rgba(255, 196, 86, 0.761);
+    transition: transform 0.1s ease-in-out;
+}
+
+.font-choice:hover {
+    transform: scale(1.05);
+}
+
+.courier-prime {
+    font-family: 'Courier Prime';
+}
+
+.eb-garamond {
+    font-family: 'EB Garamond';
+}
+
+.josefin-sans {
+    font-family: 'Josefin Sans';
+}
+
+.open-sans {
+    font-family: 'Open Sans';
+}
+
+.torre-farfan {
+    font-family: 'Torre Farfan';
+}
+
+.unbounded {
+    font-family: 'Unbounded';
+}
+
+.divider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.5rem;
+}
+
 .print-section {
     cursor: pointer;
     background-color: #97d573c3;
