--- a/src/styles/print.css
+++ b/src/styles/print.css
@@ -91,7 +91,6 @@
 
 .print-section {
     cursor: pointer;
-    background-color: #97d573c3;
     margin: 0 auto 20px;
     width: fit-content;
     border: 0.5px solid black;
@@ -101,6 +100,7 @@
     justify-content: center;
     align-items: center;
     transition: transform 0.1s ease-in-out;
+    background-color: rgba(255, 228, 179, 0.775);
 }
 
 .print-section:hover {
